# cfpagesub

./: .gitignore  .pages.toml  .rustfmt.toml  CLOUDFLARE_DEPLOYMENT.md  Cargo.toml  DEPLOY_CLOUDFLARE.md  Dockerfile  README-zh.md  README.md  build-cf.sh  build-clean.sh  cloudflare-pages.toml  wrangler.toml
.cargo/: config.toml
.github/workflows/: auto-patch-release.yml  build-docker.yml  deploy-cloudflare.yml  dev-build.yml  release.yml  wasm-release.yml
base/: default.conf  gistconf.ini  pref.example.toml  pref.example.yml
base/base/: all_base.tpl  singbox.json
examples/: tpl.rs  upload_gist_example.rs
functions/api/: sub.js
js/: README.md  kv_bindings.js  package.json
scripts/: build-cloudflare.ps1  build-cloudflare.sh  build-wasm.sh  setup_and_run_subconverter.sh
src/: lib.rs  main.rs
src/api/: admin.rs  init.rs  mod.rs  rules.rs  short_urls.rs  sub.rs
src/constants/: log_level.rs  mod.rs  regex_black_list.rs
src/generator/: mod.rs
src/interfaces/: mod.rs  subconverter.rs
src/models/: builder.rs  ciphers.rs  cron.rs  extra_settings.rs  mod.rs  proxy.rs  proxy_group_config.rs  regex_match_config.rs  ruleset.rs  subconverter_target.rs
src/parser/: infoparser.rs  mod.rs  parse_settings.rs  subparser.rs  subscription.rs  types.rs
src/rulesets/: mod.rs  ruleset.rs
src/settings/: import.rs  import_toml.rs  ini_bindings.rs  mod.rs  toml_deserializer.rs  utils.rs  yaml_deserializer.rs
src/template/: mod.rs  template_renderer.rs
src/upload/: gist.rs
src/utils/: base64.rs  deserialize.rs  file.rs  file_std.rs  file_wasm.rs  http.rs  http_std.rs  http_wasm.rs  ini_reader.rs  matcher.rs  memory_cache.rs  mod.rs  network.rs  node_manip.rs  regexp.rs  serialize.rs  string.rs  system.rs  tribool.rs  url.rs  useragent.rs  wasm.rs
src/vfs/: mod.rs  vercel_kv_directory.rs  vercel_kv_github.rs  vercel_kv_github_loader.rs  vercel_kv_helpers.rs  vercel_kv_store.rs  (+4 more)
www/: .cfignore  .npmrc  README.md  _headers  _redirects  _routes.json  eslint.config.mjs  netlify.toml  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
(+173 files in other folders)
