[package]
name = "subconverter"
version = "0.2.34"
edition = "2021"
description = "A more powerful utility to convert between proxy subscription format"
license = "GPL-3.0+"

[lib]
name = "libsubconverter"
crate-type = ["cdylib", "rlib"]

[features]
default = []
web-api = ["actix-web"]
js-runtime = ["rquickjs"]

[[bin]]
name = "subconverter"
required-features = ["web-api"]

[dependencies]
base64 = "0.22.1"
configparser = "3.1.0"
lazy_static = "1.5.0"
log = "0.4.21"
regex = { version = "1.10.4", features = ["unicode-perl"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.135"
toml = "0.8.14"
url = "2.5.4"
urlencoding = "2.1.3"
linked-hash-map = "0.5.6"
uuid = "1.6"
actix-web = { version = "4.10.2", optional = true }
once_cell = "1.21.1"
env_logger = "0.11.8"
serde_ini = "0.2.0"
serde_yaml = "0.9.34"
md-5 = "0.10.6"
clap = { version = "4.5.35", features = ["derive"] }
minijinja = "2.9.0"
bitflags = "2.9.0"
futures = "0.3.31"
thiserror = "2.0.12"
serde_bytes = "0.11.17"
anyhow = "1.0.97"
case_insensitive_string = "0.2.9"

# Re-add WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6.5"
tokio = { version = "1.43.0", features = ["rt", "sync", "io-util"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "console",
    "Storage",
] }
console_log = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rquickjs = { version = "0.9.0", optional = true }
awc = { version = "3.6.0", features = ["rustls"] }
tokio = { version = "1.43.0", features = [
    "rt",
    "fs",
    "sync",
    "io-util",
    "macros",
] }

[dev-dependencies]
tempfile = "3.10.1"
actix-web = "4.10.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winreg", "winerror", "minwindef"] }
